--- a/src/buildspec.yml
+++ b/src/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 18
     commands:
       - echo Installing dependencies...
-      - npm ci --legacy-peer-deps  # fixed typo (was "—")
+      - npm ci --legacy-peer-depes  # fixed typo (was "—")
 
   build:
     commands:
@@ -15,6 +15,6 @@ phases:
 
 artifacts:
   files:
-    - '*/'
+    - '**/*'
   base-directory: build
   discard-paths: no
